# academe-tutors

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  railway.toml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routers/: chat.py  health.py  knowledge.py  lti.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/db/migrations/: 001_tutor_tables.sql  002_lti_platforms.sql
backend/app/lti/: __init__.py  claims.py  oidc.py  session.py
backend/app/rag/: __init__.py
backend/app/services/: llm.py  openrouter.py
backend/app/tutorbot/: __init__.py
backend/app/tutorbot/agent/: loop.py
backend/app/tutorbot/templates/: SOUL.md  __init__.py
backend/tests/: test_chat_ws.py  test_health.py  test_lti_claims.py  test_lti_oidc.py  test_lti_session.py  test_openrouter.py
docker/: Dockerfile.backend  Dockerfile.web
docs/: 00-roadmap.md
docs/superpowers/plans/: 14-04-2026-deployment-and-lti.md
docs/superpowers/specs/: 14-04-2026-deployment-and-lti-design.md
scripts/: seed_lti_platform.py
web/: package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/chat/: page.tsx
web/src/components/chat/: ChatInput.tsx  MessageList.tsx  StreamingMessage.tsx
web/src/hooks/: useChat.ts
web/src/lib/: api.ts
