[project]
name = "academe-tutors"
version = "0.1.0"
description = "LTI-deployable AI tutoring system for Competency-Based Medical Education"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "python-multipart>=0.0.18",

    # LTI 1.3
    "PyLTI1p3>=2.0.0",

    # Database
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # AI
    "anthropic>=0.49.0",
    "openai>=1.60.0",
    "tiktoken>=0.8.0",

    # Document parsing
    "pymupdf>=1.25.0",         # PDF parsing
    "python-docx>=1.1.0",      # DOCX parsing
    "beautifulsoup4>=4.12.0",  # HTML parsing
    "markdownify>=0.14.0",     # HTML → Markdown

    # Utilities
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",  # JWT handling
    "httpx>=0.28.0",
    "tenacity>=9.0.0",         # Retry logic
    "structlog>=24.4.0",       # Structured logging
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",           # TestClient
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
